# librma

./: .gitreview  CMakeLists.txt  Makefile.am  Makefile.librma2.dist  README  README.md  README_KNC  configure.ac  cross-configure  extoll_env.bash  librma.spec_example  mic_crossconfig  wscript
admin/: acinclude.m4  bootstrap
debian/: changelog  control  librma.dirs  rules
doc/: CMakeLists.txt  Makefile.am  doxyfile  doxyfile.in
examples/: CMakeLists.txt  Makefile.am  send_recv_example.c
include/: CMakeLists.txt  Makefile.am  do  extoll2_list.h  rma2.h  rma2_list.h  sys_rma2.h
scala-lib/: pom.xml
scala-lib/src/main/jnaerator/: config.jnaerator  rma2_region.h
scala-lib/src/main/native/: pinned_buffer.c  pinned_buffer.h
scala-lib/src/main/scala/com.extoll.rma2/: Rma.scala  RmaNode.scala  RmaNotification.scala
scala-lib/src/main/scala/com.extoll.rma2.device/: RMA2Device.scala
scala-lib/src/main/scala/com/extoll/rma2/: Rma.scala
scala-lib/src/main/scala/com/extoll/rma2/device/: RMA2Device.scala
src/: CMakeLists.txt  Makefile.am  extoll2_list.c  librma2.c  librma2rc.c
tests/: CMakeLists.txt  Makefile.am  connect.c  destination_process.c  do  illegal_cmd.c  illegal_cmd_with_noti.c  illegal_excel.c  illegal_excel_rra.c  illegal_mem_read.c  illegal_mem_vpid_write.c  illegal_mem_write.c  illegal_mem_write_requester.c  illegal_vpid_write.c  mem_read.c  mem_read_ntr.c  mem_read_with_noti.c  mem_write.c  mem_write_ntr.c  mem_write_with_noti.c  mem_write_with_noti_irq.c  noti_put.c  notiput_irq.c  openclose.c  pmem_read.c  pmem_read_with_noti.c  pmem_target.c  pmem_write.c  pmem_write_with_noti.c  pmem_write_with_noti_irq.c  rma2_ping.c  rma2_pong.c  rma2test.c  rma2test.h  rra_read.c  rra_write.c  simple_lock.c  testregister.c
